src/main/java/org/example/playground/error/exception/KidWaitingException.java
package org.example.playground.error.exception;

public class KidWaitingException extends RuntimeException {
    public KidWaitingException(String message) {
        super(message);
    }
}
